# caelum-analytics

./: .env.example  .gitignore  CLAUDE.md  DISTRIBUTED-MCP-ARCHITECTURE-PLAN.md  Dockerfile  IMPLEMENTATION-ROADMAP.md  IMPROVEMENT-PATTERNS.md  LAN_DISTRIBUTION_GUIDE.md  MCP-SERVER-IMPLEMENTATION-GUIDE.md  NETWORK_DISCOVERY.md  README.md  WORKFLOW-ARCHITECTURE-PROPOSAL.md  WORKFLOW-IMPROVEMENTS.md  beacon_only.py  caelum-prehook  claude_config_5workflow_optimized.json  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  run_workflow_server.py  test_self_optimization.py  test_workflow_servers.py  validate-ports.py
mcp-port-guardian/: package-lock.json  package.json
mcp-port-guardian/src/: index.ts
src/caelum_analytics/: __init__.py  claude_cli_integration.py  claude_sync.py  cli.py  cluster_protocol.py  config.py  distributed_code_analysis.py  dynamic_server_explorer.py  evolutionary_monitor.py  llm_prehook.py  machine_registry.py  port_enforcer.py  port_registry.py  tool_prescreener.py  udp_beacon.py  workflow_server_template.py
src/caelum_analytics/self_optimization/: __init__.py  adaptive_workflow.py  analytics_integration.py  caelum_integration.py  change_suggester.py  lan_synchronization.py  performance_monitor.py  self_observer.py
src/caelum_analytics/web/: app.py  caelum_cluster_monitor.py  optimization_dashboard.py  server_explorer_api.py
src/caelum_analytics/workflow_servers/: __init__.py
src/caelum_analytics/workflow_servers/business/: __init__.py  server.py
src/caelum_analytics/workflow_servers/communication/: __init__.py  server.py
src/caelum_analytics/workflow_servers/development/: __init__.py  server.py
src/caelum_analytics/workflow_servers/infrastructure/: __init__.py  server.py
src/caelum_analytics/workflow_servers/security/: __init__.py  server.py
static/: style.css
templates/: server_explorer.html
tests/: test_complete_self_optimization.py  test_integration_simple.py
